--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "ng-mashup",
+  "name": "mashup-master-app",
   "version": "0.0.0",
+  "engines": {
+    "node": "10.16.2",
+    "npm": "6.9.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "npm-run-all --parallel watch:server start:web",
     "start:web": "ng serve",
-    "start:server": "node src/server/server.js",
+    "start:server": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
