--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@angular/platform-browser-dynamic": "^7.0.4",
     "@angular/router": "^7.0.4",
     "core-js": "^2.6.10",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "newsapi": "^2.4.0",
     "pg": "^7.14.0",
